src/test/deca/context/invalid/langage_essentiel/deuxieme_passe/regle_2_5_2.deca
// Description:
//    regle 2.5 condition
//
// Resultats:
//    Ligne 11: A method 'f' already exists in super class.
class A {
    void f() {
    }
}
class B extends A {
    int f;
}